// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree props: defaultValue: 1 mutliple: true onChange监听 1`] = `
.c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c8 {
  font-size: 1.4rem;
  cursor: pointer;
  color: #333333;
  width: none;
  box-sizing: border-box;
  padding: 0;
  list-style: none;
  display: inline-block;
  position: relative;
  white-space: nowrap;
  display: inline-block;
  margin-right: 2.142857142857143em;
}

.c8:hover > span span {
  border: 1px solid #4d63ff;
}

.c9 {
  margin: 0;
  outline: none;
  line-height: 1;
  vertical-align: text-bottom;
  display: inline-block;
}

.c12 {
  padding-left: 0.7142857142857143em;
}

.c10 {
  position: absolute;
  left: 0;
  z-index: 1;
  cursor: pointer;
  opacity: 0;
  top: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

.c15 {
  position: relative;
  box-sizing: border-box;
  top: 0;
  left: 0;
  display: block;
  width: 1.2857142857142858em;
  height: 1.2857142857142858em;
  border-radius: 0.14285714285714288em;
  background-color: #fff;
  border: 1px solid #cccccc;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c15:hover {
  border: 1px solid #4d63ff;
}

.c15::after {
  position: absolute;
  box-sizing: border-box;
  left: 0.35714285714285715em;
  top: 0.14285714285714288em;
  width: 0.4285714285714286em;
  height: 0.7142857142857143em;
  -webkit-transform: rotate(45deg) scale(0);
  -ms-transform: rotate(45deg) scale(0);
  transform: rotate(45deg) scale(0);
  -webkit-transition: all .1s cubic-bezier(.71,-.46,.88,.6);
  transition: all .1s cubic-bezier(.71,-.46,.88,.6);
  display: table;
  border: 0.14285714285714288em solid #fff;
  border-top: 0;
  border-left: 0;
  content: ' ';
}

.c11 {
  position: relative;
  box-sizing: border-box;
  top: 0;
  left: 0;
  display: block;
  width: 1.2857142857142858em;
  height: 1.2857142857142858em;
  border-radius: 0.14285714285714288em;
  background-color: #4d63ff;
  border: 1px solid #4d63ff;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c11:hover {
  border: 1px solid #4d63ff;
}

.c11::after {
  position: absolute;
  box-sizing: border-box;
  left: 0.2142857142857143em;
  top: 0.5em;
  width: 0.7142857142857143em;
  height: 0.07142857142857144em;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: all .2s cubic-bezier(.03,.86,.56,.87);
  transition: all .2s cubic-bezier(.03,.86,.56,.87);
  display: table;
  border: 0.14285714285714288em solid #fff;
  border-top: 0;
  border-left: 0;
  content: ' ';
}

.c17 {
  position: relative;
  background: #fbfbfb;
  width: 1.6666666666666667em;
  height: 25em;
  z-index: 996;
  width: 1em;
}

.c18 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.6666666666666667em;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 2.5em;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  width: 0.6666666666666667em;
  margin-left: 0.16666666666666669em;
  margin-right: 0.16666666666666669em;
}

.c18:hover {
  background-color: #7a7a7a;
}

.c2 {
  width: 19.833333333333336em;
  position: absolute;
  display: inline-block;
}

.c1 {
  overflow: hidden;
  height: 20.833333333333336em;
  width: 20.833333333333336em;
  position: relative;
}

.c16 {
  width: 19.833333333333336em;
  position: absolute;
  display: inline-block;
  left: 19.833333333333336em;
  width: 1em;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover .c16 {
  opacity: 1;
}

.c3 {
  position: relative;
  top: 0em;
  width: 100%;
  padding: 0;
}

.c6 {
  font-size: 1em;
  color: #999999;
  display: inline-block;
  margin: 0 0.8333333333333334em;
  vertical-align: top;
}

.c14 {
  font-size: 1em;
  color: #999999;
  display: inline-block;
  margin: 0 0.8333333333333334em;
  vertical-align: top;
  opacity: 0;
}

.c4 {
  padding-right: 1.5em;
  margin: 0;
}

.c5 {
  min-height: 2.8333333333333335em;
  line-height: 2.8333333333333335em;
  list-style: none;
  white-space: nowrap;
  outline: 0;
  overflow: hidden;
}

.c13 {
  margin: 0;
  padding: 0 0 0 1.5em;
}

<div
  className="c0 c1"
  onWheel={[Function]}
>
  <div
    className="c2"
  >
    <ul
      className="rc-tree c3 c4"
      role="tree-node"
      unselectable="on"
    >
      <li
        className="c5"
        selected={false}
        title="1"
        unselectable="on"
      >
        <span
          className="c6"
          onClick={[Function]}
        >
          <i
            className="lugia-icon-direction_caret_down  c7"
          />
        </span>
        <label
          className="c8"
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="c9"
            onClick={null}
          >
            <input
              className="c10"
              disabled={false}
              onBlur={[Function]}
              type="checkbox"
            />
            <span
              checked={false}
              className="c11"
              disabled={false}
            />
          </span>
          <span
            className="c12"
          >
            1
          </span>
        </label>
        <ul
          className="c13"
          data-expanded={true}
        >
          <li
            className="c5"
            selected={false}
            title="1.1"
            unselectable="on"
          >
            <span
              className="c14"
            >
              <i
                className="lugia-icon-direction_caret_down  c7"
              />
            </span>
            <label
              className="c8"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="c9"
                onClick={null}
              >
                <input
                  className="c10"
                  disabled={false}
                  onBlur={[Function]}
                  type="checkbox"
                />
                <span
                  checked={false}
                  className="c15"
                  disabled={false}
                />
              </span>
              <span
                className="c12"
              >
                1.1
              </span>
            </label>
          </li>
          <li
            className="c5"
            selected={false}
            title="1.2"
            unselectable="on"
          >
            <span
              className="c6"
              onClick={[Function]}
            >
              <i
                className="lugia-icon-direction_caret_down  c7"
              />
            </span>
            <label
              className="c8"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="c9"
                onClick={null}
              >
                <input
                  className="c10"
                  disabled={false}
                  onBlur={[Function]}
                  type="checkbox"
                />
                <span
                  checked={false}
                  className="c15"
                  disabled={false}
                />
              </span>
              <span
                className="c12"
              >
                1.2
              </span>
            </label>
            <ul
              className="c13"
              data-expanded={true}
            >
              <li
                className="c5"
                selected={false}
                title="1.2.1"
                unselectable="on"
              >
                <span
                  className="c14"
                >
                  <i
                    className="lugia-icon-direction_caret_down  c7"
                  />
                </span>
                <label
                  className="c8"
                  disabled={false}
                  onClick={[Function]}
                >
                  <span
                    className="c9"
                    onClick={null}
                  >
                    <input
                      className="c10"
                      disabled={false}
                      onBlur={[Function]}
                      type="checkbox"
                    />
                    <span
                      checked={false}
                      className="c15"
                      disabled={false}
                    />
                  </span>
                  <span
                    className="c12"
                  >
                    1.2.1
                  </span>
                </label>
              </li>
              <li
                className="c5"
                selected={false}
                title="1.2.2"
                unselectable="on"
              >
                <span
                  className="c6"
                  onClick={[Function]}
                >
                  <i
                    className="lugia-icon-direction_caret_down  c7"
                  />
                </span>
                <label
                  className="c8"
                  disabled={false}
                  onClick={[Function]}
                >
                  <span
                    className="c9"
                    onClick={null}
                  >
                    <input
                      className="c10"
                      disabled={false}
                      onBlur={[Function]}
                      type="checkbox"
                    />
                    <span
                      checked={false}
                      className="c15"
                      disabled={false}
                    />
                  </span>
                  <span
                    className="c12"
                  >
                    1.2.2
                  </span>
                </label>
                <ul
                  className="c13"
                  data-expanded={true}
                >
                  <li
                    className="c5"
                    selected={false}
                    title="1.2.2.1"
                    unselectable="on"
                  >
                    <span
                      className="c6"
                      onClick={[Function]}
                    >
                      <i
                        className="lugia-icon-direction_caret_down  c7"
                      />
                    </span>
                    <label
                      className="c8"
                      disabled={false}
                      onClick={[Function]}
                    >
                      <span
                        className="c9"
                        onClick={null}
                      >
                        <input
                          className="c10"
                          disabled={false}
                          onBlur={[Function]}
                          type="checkbox"
                        />
                        <span
                          checked={false}
                          className="c15"
                          disabled={false}
                        />
                      </span>
                      <span
                        className="c12"
                      >
                        1.2.2.1
                      </span>
                    </label>
                    <ul
                      className="c13"
                      data-expanded={true}
                    >
                      <li
                        className="c5"
                        selected={false}
                        title="1.2.2.1.1"
                        unselectable="on"
                      >
                        <span
                          className="c14"
                        >
                          <i
                            className="lugia-icon-direction_caret_down  c7"
                          />
                        </span>
                        <label
                          className="c8"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <span
                            className="c9"
                            onClick={null}
                          >
                            <input
                              className="c10"
                              disabled={false}
                              onBlur={[Function]}
                              type="checkbox"
                            />
                            <span
                              checked={false}
                              className="c15"
                              disabled={false}
                            />
                          </span>
                          <span
                            className="c12"
                          >
                            1.2.2.1.1
                          </span>
                        </label>
                      </li>
                      <li
                        className="c5"
                        selected={false}
                        title="1.2.2.1.2"
                        unselectable="on"
                      >
                        <span
                          className="c14"
                        >
                          <i
                            className="lugia-icon-direction_caret_down  c7"
                          />
                        </span>
                        <label
                          className="c8"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <span
                            className="c9"
                            onClick={null}
                          >
                            <input
                              className="c10"
                              disabled={false}
                              onBlur={[Function]}
                              type="checkbox"
                            />
                            <span
                              checked={false}
                              className="c15"
                              disabled={false}
                            />
                          </span>
                          <span
                            className="c12"
                          >
                            1.2.2.1.2
                          </span>
                        </label>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
  </div>
  <div
    className="c16"
  >
    <div
      className="c17"
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
      onWheel={[Function]}
      style={
        Object {
          "height": "20.833333333333336em",
        }
      }
    >
      <div
        className="c18"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "4.833333333333333em",
            "top": "0em",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Tree props: query: 2.1.2.1 expandAll: true mutliple: false 1`] = `
.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c8 {
  display: inline-block;
  position: relative;
  padding-right: 0.5em;
  top: 0.125em;
}

.c0 {
  overflow: hidden;
  height: 20.833333333333336em;
  width: 20.833333333333336em;
  position: relative;
}

.c1 {
  position: relative;
  top: 0em;
  width: 100%;
  padding: 0;
}

.c4 {
  font-size: 1em;
  color: #999999;
  display: inline-block;
  margin: 0 0.8333333333333334em;
  vertical-align: top;
}

.c10 {
  font-size: 1em;
  color: #999999;
  display: inline-block;
  margin: 0 0.8333333333333334em;
  vertical-align: top;
  opacity: 0;
}

.c2 {
  padding-right: 1.5em;
  margin: 0;
}

.c3 {
  min-height: 2.8333333333333335em;
  line-height: 2.8333333333333335em;
  list-style: none;
  white-space: nowrap;
  outline: 0;
  overflow: hidden;
}

.c9 {
  margin: 0;
  padding: 0 0 0 1.5em;
}

.c6 {
  box-sizing: border-box;
  width: 100%;
  overflow: hidden;
  padding-left: 0.5em;
  display: inline-block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: top;
  -webkit-transition: all 0.5s ease;
  transition: all 0.5s ease;
  font-size: 1.1666666666666667em;
  color: #666666;
}

.c6:hover {
  background-color: #edf0fe;
}

.c7 {
  opacity: 1;
}

<div
  className="c0"
  onWheel={[Function]}
>
  <ul
    className="rc-tree c1 rc-tree-show-line c2"
    role="tree-node"
    unselectable="on"
  >
    <li
      className="c3"
      selected={false}
      title="2"
      unselectable="on"
    >
      <span
        className="c4"
        onClick={[Function]}
      >
        <i
          className="lugia-icon-direction_caret_down  c5"
        />
      </span>
      <span
        className="c6"
        onClick={[Function]}
        onContextMenu={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        selected={false}
        title="2"
      >
        <span
          className="c7"
          height={35}
          selected={false}
          title="2"
        >
          <i
            className="undefined c8 c5"
          />
          2
        </span>
      </span>
      <ul
        className="c9"
        data-expanded={true}
      >
        <li
          className="c3"
          selected={false}
          title="2.1"
          unselectable="on"
        >
          <span
            className="c4"
            onClick={[Function]}
          >
            <i
              className="lugia-icon-direction_caret_down  c5"
            />
          </span>
          <span
            className="c6"
            onClick={[Function]}
            onContextMenu={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            selected={false}
            title="2.1"
          >
            <span
              className="c7"
              height={35}
              selected={false}
              title="2.1"
            >
              <i
                className="undefined c8 c5"
              />
              2.1
            </span>
          </span>
          <ul
            className="c9"
            data-expanded={true}
          >
            <li
              className="c3"
              selected={false}
              title="2.1.2"
              unselectable="on"
            >
              <span
                className="c4"
                onClick={[Function]}
              >
                <i
                  className="lugia-icon-direction_caret_down  c5"
                />
              </span>
              <span
                className="c6"
                onClick={[Function]}
                onContextMenu={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                selected={false}
                title="2.1.2"
              >
                <span
                  className="c7"
                  height={35}
                  selected={false}
                  title="2.1.2"
                >
                  <i
                    className="undefined c8 c5"
                  />
                  2.1.2
                </span>
              </span>
              <ul
                className="c9"
                data-expanded={true}
              >
                <li
                  className="c3"
                  selected={false}
                  title="2.1.2.1"
                  unselectable="on"
                >
                  <span
                    className="c10"
                  >
                    <i
                      className="lugia-icon-direction_caret_down  c5"
                    />
                  </span>
                  <span
                    className="c6"
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    selected={false}
                    title="2.1.2.1"
                  >
                    <span
                      className="c7"
                      height={35}
                      selected={false}
                      title="2.1.2.1"
                    >
                      <i
                        className="undefined c8 c5"
                      />
                      2.1.2.1
                    </span>
                  </span>
                </li>
              </ul>
            </li>
          </ul>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Tree props: value: 1 mutliple: false onChange监听 limit 1`] = `
Array [
  .c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c10 {
  display: inline-block;
  position: relative;
  padding-right: 0.5em;
  top: 0.125em;
}

.c15 {
  position: relative;
  background: #fbfbfb;
  width: 1.6666666666666667em;
  height: 25em;
  z-index: 996;
  width: 1em;
}

.c16 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.6666666666666667em;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 2.5em;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  width: 0.6666666666666667em;
  margin-left: 0.16666666666666669em;
  margin-right: 0.16666666666666669em;
}

.c16:hover {
  background-color: #7a7a7a;
}

.c2 {
  width: 19.833333333333336em;
  position: absolute;
  display: inline-block;
}

.c1 {
  overflow: hidden;
  height: 20.833333333333336em;
  width: 20.833333333333336em;
  position: relative;
}

.c14 {
  width: 19.833333333333336em;
  position: absolute;
  display: inline-block;
  left: 19.833333333333336em;
  width: 1em;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover .c14 {
  opacity: 1;
}

.c3 {
  position: relative;
  top: 0em;
  width: 100%;
  padding: 0;
}

.c6 {
  font-size: 1em;
  color: #999999;
  display: inline-block;
  margin: 0 0.8333333333333334em;
  vertical-align: top;
}

.c12 {
  font-size: 1em;
  color: #999999;
  display: inline-block;
  margin: 0 0.8333333333333334em;
  vertical-align: top;
  opacity: 0;
}

.c4 {
  padding-right: 1.5em;
  margin: 0;
}

.c5 {
  min-height: 2.8333333333333335em;
  line-height: 2.8333333333333335em;
  list-style: none;
  white-space: nowrap;
  outline: 0;
  overflow: hidden;
}

.c11 {
  margin: 0;
  padding: 0 0 0 1.5em;
}

.c13 {
  box-sizing: border-box;
  width: 100%;
  overflow: hidden;
  padding-left: 0.5em;
  display: inline-block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: top;
  -webkit-transition: all 0.5s ease;
  transition: all 0.5s ease;
  font-size: 1.1666666666666667em;
  color: #666666;
}

.c13:hover {
  background-color: #edf0fe;
}

.c8 {
  box-sizing: border-box;
  width: 100%;
  overflow: hidden;
  padding-left: 0.5em;
  display: inline-block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: top;
  -webkit-transition: all 0.5s ease;
  transition: all 0.5s ease;
  font-size: 1.1666666666666667em;
  color: #666666;
  background-color: #edf0fe;
}

.c8:hover {
  background-color: #edf0fe;
}

.c9 {
  opacity: 1;
}

<div
    className="c0 c1"
    onWheel={[Function]}
  >
    <div
      className="c2"
    >
      <ul
        className="rc-tree c3 c4"
        role="tree-node"
        unselectable="on"
      >
        <li
          className="c5"
          selected={true}
          title="1"
          unselectable="on"
        >
          <span
            className="c6"
            onClick={[Function]}
          >
            <i
              className="lugia-icon-direction_caret_down  c7"
            />
          </span>
          <span
            className="c8"
            onClick={[Function]}
            onContextMenu={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            selected={true}
            title="1"
          >
            <span
              className="c9"
              height={35}
              selected={true}
              title="1"
            >
              <i
                className="undefined c10 c7"
              />
              1
            </span>
          </span>
          <ul
            className="c11"
            data-expanded={true}
          >
            <li
              className="c5"
              selected={false}
              title="1.1"
              unselectable="on"
            >
              <span
                className="c12"
              >
                <i
                  className="lugia-icon-direction_caret_down  c7"
                />
              </span>
              <span
                className="c13"
                onClick={[Function]}
                onContextMenu={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                selected={false}
                title="1.1"
              >
                <span
                  className="c9"
                  height={35}
                  selected={false}
                  title="1.1"
                >
                  <i
                    className="undefined c10 c7"
                  />
                  1.1
                </span>
              </span>
            </li>
            <li
              className="c5"
              selected={false}
              title="1.2"
              unselectable="on"
            >
              <span
                className="c6"
                onClick={[Function]}
              >
                <i
                  className="lugia-icon-direction_caret_down  c7"
                />
              </span>
              <span
                className="c13"
                onClick={[Function]}
                onContextMenu={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                selected={false}
                title="1.2"
              >
                <span
                  className="c9"
                  height={35}
                  selected={false}
                  title="1.2"
                >
                  <i
                    className="undefined c10 c7"
                  />
                  1.2
                </span>
              </span>
              <ul
                className="c11"
                data-expanded={true}
              >
                <li
                  className="c5"
                  selected={false}
                  title="1.2.1"
                  unselectable="on"
                >
                  <span
                    className="c12"
                  >
                    <i
                      className="lugia-icon-direction_caret_down  c7"
                    />
                  </span>
                  <span
                    className="c13"
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    selected={false}
                    title="1.2.1"
                  >
                    <span
                      className="c9"
                      height={35}
                      selected={false}
                      title="1.2.1"
                    >
                      <i
                        className="undefined c10 c7"
                      />
                      1.2.1
                    </span>
                  </span>
                </li>
                <li
                  className="c5"
                  selected={false}
                  title="1.2.2"
                  unselectable="on"
                >
                  <span
                    className="c6"
                    onClick={[Function]}
                  >
                    <i
                      className="lugia-icon-direction_caret_down  c7"
                    />
                  </span>
                  <span
                    className="c13"
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    selected={false}
                    title="1.2.2"
                  >
                    <span
                      className="c9"
                      height={35}
                      selected={false}
                      title="1.2.2"
                    >
                      <i
                        className="undefined c10 c7"
                      />
                      1.2.2
                    </span>
                  </span>
                  <ul
                    className="c11"
                    data-expanded={true}
                  >
                    <li
                      className="c5"
                      selected={false}
                      title="1.2.2.1"
                      unselectable="on"
                    >
                      <span
                        className="c6"
                        onClick={[Function]}
                      >
                        <i
                          className="lugia-icon-direction_caret_down  c7"
                        />
                      </span>
                      <span
                        className="c13"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        selected={false}
                        title="1.2.2.1"
                      >
                        <span
                          className="c9"
                          height={35}
                          selected={false}
                          title="1.2.2.1"
                        >
                          <i
                            className="undefined c10 c7"
                          />
                          1.2.2.1
                        </span>
                      </span>
                      <ul
                        className="c11"
                        data-expanded={true}
                      >
                        <li
                          className="c5"
                          selected={false}
                          title="1.2.2.1.1"
                          unselectable="on"
                        >
                          <span
                            className="c12"
                          >
                            <i
                              className="lugia-icon-direction_caret_down  c7"
                            />
                          </span>
                          <span
                            className="c13"
                            onClick={[Function]}
                            onContextMenu={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            selected={false}
                            title="1.2.2.1.1"
                          >
                            <span
                              className="c9"
                              height={35}
                              selected={false}
                              title="1.2.2.1.1"
                            >
                              <i
                                className="undefined c10 c7"
                              />
                              1.2.2.1.1
                            </span>
                          </span>
                        </li>
                        <li
                          className="c5"
                          selected={false}
                          title="1.2.2.1.2"
                          unselectable="on"
                        >
                          <span
                            className="c12"
                          >
                            <i
                              className="lugia-icon-direction_caret_down  c7"
                            />
                          </span>
                          <span
                            className="c13"
                            onClick={[Function]}
                            onContextMenu={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            selected={false}
                            title="1.2.2.1.2"
                          >
                            <span
                              className="c9"
                              height={35}
                              selected={false}
                              title="1.2.2.1.2"
                            >
                              <i
                                className="undefined c10 c7"
                              />
                              1.2.2.1.2
                            </span>
                          </span>
                        </li>
                      </ul>
                    </li>
                  </ul>
                </li>
              </ul>
            </li>
          </ul>
        </li>
      </ul>
    </div>
    <div
      className="c14"
    >
      <div
        className="c15"
        onMouseDown={[Function]}
        onMouseMove={[Function]}
        onMouseOut={[Function]}
        onMouseUp={[Function]}
        onWheel={[Function]}
        style={
          Object {
            "height": "20.833333333333336em",
          }
        }
      >
        <div
          className="c16"
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "4.833333333333333em",
              "top": "0em",
            }
          }
        />
      </div>
    </div>
  </div>,
  <button
    onClick={[Function]}
  />,
]
`;

exports[`Tree props: value: 1 mutliple: true onChange监听 limit 1`] = `
.c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c8 {
  font-size: 1.4rem;
  cursor: pointer;
  color: #333333;
  width: none;
  box-sizing: border-box;
  padding: 0;
  list-style: none;
  display: inline-block;
  position: relative;
  white-space: nowrap;
  display: inline-block;
  margin-right: 2.142857142857143em;
}

.c8:hover > span span {
  border: 1px solid #4d63ff;
}

.c9 {
  margin: 0;
  outline: none;
  line-height: 1;
  vertical-align: text-bottom;
  display: inline-block;
}

.c12 {
  padding-left: 0.7142857142857143em;
}

.c10 {
  position: absolute;
  left: 0;
  z-index: 1;
  cursor: pointer;
  opacity: 0;
  top: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

.c15 {
  position: relative;
  box-sizing: border-box;
  top: 0;
  left: 0;
  display: block;
  width: 1.2857142857142858em;
  height: 1.2857142857142858em;
  border-radius: 0.14285714285714288em;
  background-color: #fff;
  border: 1px solid #cccccc;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c15:hover {
  border: 1px solid #4d63ff;
}

.c15::after {
  position: absolute;
  box-sizing: border-box;
  left: 0.35714285714285715em;
  top: 0.14285714285714288em;
  width: 0.4285714285714286em;
  height: 0.7142857142857143em;
  -webkit-transform: rotate(45deg) scale(0);
  -ms-transform: rotate(45deg) scale(0);
  transform: rotate(45deg) scale(0);
  -webkit-transition: all .1s cubic-bezier(.71,-.46,.88,.6);
  transition: all .1s cubic-bezier(.71,-.46,.88,.6);
  display: table;
  border: 0.14285714285714288em solid #fff;
  border-top: 0;
  border-left: 0;
  content: ' ';
}

.c11 {
  position: relative;
  box-sizing: border-box;
  top: 0;
  left: 0;
  display: block;
  width: 1.2857142857142858em;
  height: 1.2857142857142858em;
  border-radius: 0.14285714285714288em;
  background-color: #4d63ff;
  border: 1px solid #4d63ff;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c11:hover {
  border: 1px solid #4d63ff;
}

.c11::after {
  position: absolute;
  box-sizing: border-box;
  left: 0.2142857142857143em;
  top: 0.5em;
  width: 0.7142857142857143em;
  height: 0.07142857142857144em;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: all .2s cubic-bezier(.03,.86,.56,.87);
  transition: all .2s cubic-bezier(.03,.86,.56,.87);
  display: table;
  border: 0.14285714285714288em solid #fff;
  border-top: 0;
  border-left: 0;
  content: ' ';
}

.c17 {
  position: relative;
  background: #fbfbfb;
  width: 1.6666666666666667em;
  height: 25em;
  z-index: 996;
  width: 1em;
}

.c18 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.6666666666666667em;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 2.5em;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  width: 0.6666666666666667em;
  margin-left: 0.16666666666666669em;
  margin-right: 0.16666666666666669em;
}

.c18:hover {
  background-color: #7a7a7a;
}

.c2 {
  width: 19.833333333333336em;
  position: absolute;
  display: inline-block;
}

.c1 {
  overflow: hidden;
  height: 20.833333333333336em;
  width: 20.833333333333336em;
  position: relative;
}

.c16 {
  width: 19.833333333333336em;
  position: absolute;
  display: inline-block;
  left: 19.833333333333336em;
  width: 1em;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover .c16 {
  opacity: 1;
}

.c3 {
  position: relative;
  top: 0em;
  width: 100%;
  padding: 0;
}

.c6 {
  font-size: 1em;
  color: #999999;
  display: inline-block;
  margin: 0 0.8333333333333334em;
  vertical-align: top;
}

.c14 {
  font-size: 1em;
  color: #999999;
  display: inline-block;
  margin: 0 0.8333333333333334em;
  vertical-align: top;
  opacity: 0;
}

.c4 {
  padding-right: 1.5em;
  margin: 0;
}

.c5 {
  min-height: 2.8333333333333335em;
  line-height: 2.8333333333333335em;
  list-style: none;
  white-space: nowrap;
  outline: 0;
  overflow: hidden;
}

.c13 {
  margin: 0;
  padding: 0 0 0 1.5em;
}

<div
  className="c0 c1"
  onWheel={[Function]}
>
  <div
    className="c2"
  >
    <ul
      className="rc-tree c3 c4"
      role="tree-node"
      unselectable="on"
    >
      <li
        className="c5"
        selected={false}
        title="1"
        unselectable="on"
      >
        <span
          className="c6"
          onClick={[Function]}
        >
          <i
            className="lugia-icon-direction_caret_down  c7"
          />
        </span>
        <label
          className="c8"
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="c9"
            onClick={null}
          >
            <input
              className="c10"
              disabled={false}
              onBlur={[Function]}
              type="checkbox"
            />
            <span
              checked={false}
              className="c11"
              disabled={false}
            />
          </span>
          <span
            className="c12"
          >
            1
          </span>
        </label>
        <ul
          className="c13"
          data-expanded={true}
        >
          <li
            className="c5"
            selected={false}
            title="1.1"
            unselectable="on"
          >
            <span
              className="c14"
            >
              <i
                className="lugia-icon-direction_caret_down  c7"
              />
            </span>
            <label
              className="c8"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="c9"
                onClick={null}
              >
                <input
                  className="c10"
                  disabled={false}
                  onBlur={[Function]}
                  type="checkbox"
                />
                <span
                  checked={false}
                  className="c15"
                  disabled={false}
                />
              </span>
              <span
                className="c12"
              >
                1.1
              </span>
            </label>
          </li>
          <li
            className="c5"
            selected={false}
            title="1.2"
            unselectable="on"
          >
            <span
              className="c6"
              onClick={[Function]}
            >
              <i
                className="lugia-icon-direction_caret_down  c7"
              />
            </span>
            <label
              className="c8"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="c9"
                onClick={null}
              >
                <input
                  className="c10"
                  disabled={false}
                  onBlur={[Function]}
                  type="checkbox"
                />
                <span
                  checked={false}
                  className="c15"
                  disabled={false}
                />
              </span>
              <span
                className="c12"
              >
                1.2
              </span>
            </label>
            <ul
              className="c13"
              data-expanded={true}
            >
              <li
                className="c5"
                selected={false}
                title="1.2.1"
                unselectable="on"
              >
                <span
                  className="c14"
                >
                  <i
                    className="lugia-icon-direction_caret_down  c7"
                  />
                </span>
                <label
                  className="c8"
                  disabled={false}
                  onClick={[Function]}
                >
                  <span
                    className="c9"
                    onClick={null}
                  >
                    <input
                      className="c10"
                      disabled={false}
                      onBlur={[Function]}
                      type="checkbox"
                    />
                    <span
                      checked={false}
                      className="c15"
                      disabled={false}
                    />
                  </span>
                  <span
                    className="c12"
                  >
                    1.2.1
                  </span>
                </label>
              </li>
              <li
                className="c5"
                selected={false}
                title="1.2.2"
                unselectable="on"
              >
                <span
                  className="c6"
                  onClick={[Function]}
                >
                  <i
                    className="lugia-icon-direction_caret_down  c7"
                  />
                </span>
                <label
                  className="c8"
                  disabled={false}
                  onClick={[Function]}
                >
                  <span
                    className="c9"
                    onClick={null}
                  >
                    <input
                      className="c10"
                      disabled={false}
                      onBlur={[Function]}
                      type="checkbox"
                    />
                    <span
                      checked={false}
                      className="c15"
                      disabled={false}
                    />
                  </span>
                  <span
                    className="c12"
                  >
                    1.2.2
                  </span>
                </label>
                <ul
                  className="c13"
                  data-expanded={true}
                >
                  <li
                    className="c5"
                    selected={false}
                    title="1.2.2.1"
                    unselectable="on"
                  >
                    <span
                      className="c6"
                      onClick={[Function]}
                    >
                      <i
                        className="lugia-icon-direction_caret_down  c7"
                      />
                    </span>
                    <label
                      className="c8"
                      disabled={false}
                      onClick={[Function]}
                    >
                      <span
                        className="c9"
                        onClick={null}
                      >
                        <input
                          className="c10"
                          disabled={false}
                          onBlur={[Function]}
                          type="checkbox"
                        />
                        <span
                          checked={false}
                          className="c15"
                          disabled={false}
                        />
                      </span>
                      <span
                        className="c12"
                      >
                        1.2.2.1
                      </span>
                    </label>
                    <ul
                      className="c13"
                      data-expanded={true}
                    >
                      <li
                        className="c5"
                        selected={false}
                        title="1.2.2.1.1"
                        unselectable="on"
                      >
                        <span
                          className="c14"
                        >
                          <i
                            className="lugia-icon-direction_caret_down  c7"
                          />
                        </span>
                        <label
                          className="c8"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <span
                            className="c9"
                            onClick={null}
                          >
                            <input
                              className="c10"
                              disabled={false}
                              onBlur={[Function]}
                              type="checkbox"
                            />
                            <span
                              checked={false}
                              className="c15"
                              disabled={false}
                            />
                          </span>
                          <span
                            className="c12"
                          >
                            1.2.2.1.1
                          </span>
                        </label>
                      </li>
                      <li
                        className="c5"
                        selected={false}
                        title="1.2.2.1.2"
                        unselectable="on"
                      >
                        <span
                          className="c14"
                        >
                          <i
                            className="lugia-icon-direction_caret_down  c7"
                          />
                        </span>
                        <label
                          className="c8"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <span
                            className="c9"
                            onClick={null}
                          >
                            <input
                              className="c10"
                              disabled={false}
                              onBlur={[Function]}
                              type="checkbox"
                            />
                            <span
                              checked={false}
                              className="c15"
                              disabled={false}
                            />
                          </span>
                          <span
                            className="c12"
                          >
                            1.2.2.1.2
                          </span>
                        </label>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
  </div>
  <div
    className="c16"
  >
    <div
      className="c17"
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
      onWheel={[Function]}
      style={
        Object {
          "height": "20.833333333333336em",
        }
      }
    >
      <div
        className="c18"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "4.833333333333333em",
            "top": "0em",
          }
        }
      />
    </div>
  </div>
</div>
`;
